--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -7,13 +7,18 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "three": "^0.127.0",
     "troisjs": "^0.3.1",
-    "vue": "^3.0.11"
+    "vue": "^3.0.11",
+    "vue-axios": "^3.3.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.11",
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.16",
     "vite": "^2.2.3"
   }
 }
